app/assets/stylesheets/module-form.css.scss
#notice {
  color: green;
}
.field_with_errors {
  padding: 0.2em;
  background-color: red;
  color: white;
  font-weight: bold;
  display: table;
}
#error_explanation {
  margin-bottom: 2em;
}
#error_explanation h2 {
  font-size: 1.5em;
  padding: 0.3em 0.8em;
  margin: 0;
  background-color: #c00;
  color: #fff;
  font-family: Helvetica, sans-serif;
}
#error_explanation ul li {
  font-size: 1.4em;
  list-style: square;
}

